<resources>
    <string name="New_information_of_the_waypoint_is_already_modified"> Les informations du point de route sont déjà modifiées </string>
    <string name="Please_fill_the_new_information_or_create_a_new_waypoint"> Remplir les nouvelles informations ou créer un nouveau point de route </string>
    <string name="mod_waypoint_lat_is"> La latitude du point de route modifié est </string>
    <string name="mod_waypoint_lon_is"> La longitude du point de route modifié est </string>
    <string name="mod_waypoint_name_is"> Le nom du point de route modifié est </string>
    <string name="This_is_the_end_waypoint_of"> Derner point de route de </string>
    <string name="This_is_the_start_waypoint_of"> Premier point de route de </string>
    <string name="GPS_enable"> GPS activé </string>
    <string name="GPS_disable"> GPS désactivé </string>
    <string name="reached">atteint </string>
    <string name="You_have_reached_the_last_way_point">Bravo ! le dernier point de route est atteint.</string>
    <string name="This_position_is_already_recorded">Cette position est déjà utilisée</string>
    <string name="This_name_is_already_recorded">Ce nom est déjà utilisé</string>
    <string name="Are_you_sure_changing_to_the_current_position">êtes vous certain de vouloir changer la position actuelle ?</string>
    <string name="Some_values_change_do_you_want_to_save">Des valeurs ont été changées, voulez-vous les enregistrer ?</string>
    <string name="waypoint">point de route</string>
    <string name="Cannot_selecting_the_same_way_point_as_next_way_point">Impossible de sélectionner le même point de route que le précédent</string>
    <string name="create_a_new_waypoint">création dun nouveau point de route</string>
    <string name="nothing">rien</string>
    <string name="Are_you_sure_deleting">êtes vous sûr de vouloir effacer </string>
    <string name="the_new_way_already_saved">la nouvelle route est déjà enregistrée</string>
    <string name="you_selected">vous avez choisi</string>
    <string name="Choose_the_waypoint_in">choix du point de route</string>
    <string name="GPS_is_unavailable_the_list_is_not_sort">Pas de satellite, les points ne sont pas triés par proximité</string>
    <string name="Please_fill_the_new_information">remplir les champs</string>
    <string name="Cannot_create_a_way_with_less_than_2_waypoints">impossible de créer une route avec moins de 2 points de route</string>
    <string name="Please_fill_the_name_before_saving">saisir un nom avant d\'enregistrer</string>
    <string name="please_selected_a_waypoint">sélectionner un point de route</string>
    <string name="no_selected_way">pas de route sélectionné</string>
    <string name="new_waypoint_name_is">le nouveau point de route est </string>
    <string name="new_waypoint_latitude_is">la latitude du nouveau point de route est </string>
    <string name="new_waypoint_longitude_is">la longitude du nouveau point de route est </string>
    <string name="go_back">Retour</string>
    <string name="current_waypoint">Point de route en cours</string>
    <string name="no_selected_waypoint">pas de point de route sélectionné</string>
    <string name="Delete_this_waypoint">Effacer ce point de route</string>
    <string name="app_name">SARA</string>
    <string name="menu_settings">réglages</string>
    <string name="title_activity_main">SARA</string>
    <string name="speed">vitesse</string>
    <string name="speedtreshold">seuil de vitesse</string>
    <string name="autospeed">vitesse auto</string>
    <string name="speedtimetreshold">temps minimum de répétition de la vitesse</string>
    <string name="heading">cap</string>
    <string name="headingtreshold">seuil de cap</string>
    <string name="autohead">cap auto</string>
    <string name="headingtimetreshold">temps minimum de repetition du cap</string>
    <string name="latitude">latitude</string>
    <string name="longitude">longitude</string>
    <string name="nosatelite">perdu</string>
    <string name="norecognition">non reconnu</string>
    <string name="defaultmode">mode auto par défault</string>
    <string name="vocalrecognition">reconnaissance vocale</string>
    <string name="speedunit">noeuds</string>
    <string name="headingunit">degrés</string>
    <string name="bearingunit">degrés</string>
    <string name="timeunit">secondes</string>
    <string name="kilometres">kilomètre</string>
    <string name="m">m</string>
    <string name="km">km</string>
    <string name="metres">mètre</string>
    <string name="title_activity_way_point">point de route</string>
    <string name="action_settings">réglages</string>
    <string name="title_activity_new_way_point">nouveau point de route</string>
    <string name="new_waypoint">nouveau point de route</string>
    <string name="nameText">le nom du point de route est</string>
    <string name="latitudeText">la latitude du point de route est</string>
    <string name="longitudeText">la longitude du point de route est </string>
    <string name="saveText">enregistrer</string>
    <string name="choosingTitle">vous avez sélectionné :</string>
    <string name="title_activity_modify">modifier</string>
    <string name="modifyButton">enregistrer les modifications du point de route</string>
    <string name="current_checkedBox">utiliser la position actuelle</string>
    <string name="autobearing">relèvement automatique</string>
    <string name="autodistance">distance automatique</string>
    <string name="DecreaseButton">-</string>
    <string name="IncreaseButton">+</string>
    <string name="savesetting">enregistrer</string>
    <string name="bearing">relèvement</string>
    <string name="distance">distance</string>
    <string name="bearingtreshold">seuil de relèvement</string>
    <string name="bearingtimetreshold">temps minimum de répétition du relèvement</string>
    <string name="distancetimetreshold">temps minimum de répétition de la distance</string>
    <string name="save_last_num">0</string>
    <string name="save_inst_num">0</string>
    <string name="navigation_setting">retour à la navigation</string>
    <string name="using_map">utiliser une position sur la carte</string>
    <string name="no_satellite">Pas de satellites</string>
    <string name="waiting_gps">En attente du signal GPS</string>
    <string name="cant_decrease">impossible de diminuer</string>
    <string name="cant_increase">impossible d\'augmenter</string>
    <string name="maxspeedtreshold">le seuil de vitesse maximum est atteint</string>
    <string name="minspeedtreshold">le seuil de vitesse minimum est atteint</string>
    <string name="maxspeedtimetreshold">le temps maximum de répétition est atteint</string>
    <string name="minspeedtimetreshold">le temps minimum de répétition est atteint</string>
    <string name="maxheadingtreshold">le seuil de cap maximum est atteint</string>
    <string name="minheadingtreshold">le seuil de cap minimum est atteint</string>
    <string name="maxheadingtimetreshold">le temps maximum de répétition est atteint</string>
    <string name="minheadingtimetreshold">le temps minimum de répétition est atteint</string>
    <string name="maxbearingtreshold">le seuil de relèvement maximum est atteint</string>
    <string name="minbearingtreshold">le seuil de relèvement minimum est atteint</string>
    <string name="maxbearingtimetreshold">le temps maximum de répétition est atteint</string>
    <string name="minbearingtimetreshold">le temps minimum de répétition est atteint</string>
    <string name="maxdistancetimetreshold">le temps maximum de répétition est atteint</string>
    <string name="mindistancetimetreshold">le temps minimum de répétition est atteint</string>
    <string name="nowaypoint">pas de point de route</string>
    <string name="notactivate">point de route non activé</string>
    <string name="savebutton">enregistrer</string>
    <string name="save_and_activateButton">enregistrer &amp; Activer</string>
    <string name="instant_waypoint">créer un point de route ici</string>
    <string name="title_autosetting">Annonces auto</string>
    <string name="auto_setting">menu annonce auto</string>
    <string name="waypoint_setting">menu point de route</string>
    <string name="navigation">Retour à la navigation</string>
    <string name="navigation_title">NAVIGATION</string>
    <string name="autoaccuracy">précision auto</string>
    <string name="accuracy">précision</string>
    <string name="deg">deg</string>
    <string name="knot">noeud</string>
    <string name="accuracytimetreshold">Temps minimum de répétition</string>
    <string name="maxaccuracytimetreshold">le temps maximum de répétition est atteint</string>
    <string name="minaccuracytimetreshold">le temps minimum de répétition est atteint</string>
    <string name="general_setting">menu réglage</string>
    <string name="title_generalsetting">réglage</string>
    <string name="map">carte</string>
    <string name="speedsetting">réglage vitesse auto</string>
    <string name="headingsetting">réglage cap auto</string>
    <string name="bearingsetting">réglage relèvement auto</string>
    <string name="distancesetting">réglage distance auto</string>
    <string name="accuracysetting">réglage précision auto</string>
    <string name="backtoautosetting">Retour réglage annonce auto</string>
    <string name="speed_unit_setting">unité de vitesse</string>
    <string name="bearing_unit_setting">unité de relèvement</string>
    <string name="distance_unit_setting">unité de distance</string>
    <string name="map_type_setting">choix de la carte</string>
    <string name="speech_rate_setting">vitesse d\'élocution</string>
    <string name="knots">noeud </string>
    <string name="km_per_hour">kilomètre heure</string>
    <string name="speedUnitIntro">choisir l\'unité de vitesse</string>
    <string name="message_alertdialog_autosetting">Voulez-vous enregistrer?</string>
    <string name="title_alertdialog_speedsetting">vitesse auto changée. Voulez-vous enregistrer?</string>
    <string name="title_alertdialog_headingsetting">cap auto changée. Voulez-vous enregistrer?</string>
    <string name="title_alertdialog_bearingsetting">relèvement auto changée. Voulez-vous enregistrer?</string>
    <string name="title_alertdialog_distancesetting">distance auto changée. Voulez-vous enregistrer?</string>
    <string name="title_alertdialog_accuracysetting">précision auto changée. Voulez-vous enregistrer?</string>
    <string name="kmperh">km/h</string>
    <string name="backtogeneralsetting">retour aux réglages</string>
    <string name="cardinal">cardinal</string>
    <string name="portandstarboard">tribord/bâbord</string>
    <string name="onport">bâbor</string>
    <string name="onstarboard">tribord</string>
    <string name="degrees">degrés</string>
    <string name="KMandM">Kilomètre et mètre</string>
    <string name="nauticalmile">mille nautique</string>
    <string name="nauticalmiles">milles nautique</string>
    <string name="nm">nautique</string>
    <string name="title_alertdialog_speedunit">unité de vitesse changée. Voulez-vous enregistrer?</string>
    <string name="title_alertdialog_bearingunit">unité de relèvement changée. Voulez-vous enregistrer?</string>
    <string name="title_alertdialog_distanceunit">unité de distance changée. Voulez-vous enregistrer?</string>
    <string name="yes">oui</string>
    <string name="no">non</string>
    <string name="speechIntro">ajuster la vitesse d\'élocution</string>
    <string name="plus_button">+</string>
    <string name="minus_button">-</string>
    <string name="choose_bearing_unit">choisir l\'unité de relèvement.</string>
    <string name="choos_distance_unit">choisir l\'unité de distance.</string>
    <string name="choos_speed_unit">choisir l\'unité de vitesse.</string>
    <string name="portandstartboardunit">unité tribord/babord</string>
    <string name="cardinalunit">unité cardinale</string>
   <string name="way_menu">menu route</string>
</resources>