<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="30dp"
    android:paddingLeft="30dp"
    android:paddingRight="30dp"
    android:paddingTop="30dp" >

    <Button
        android:id="@+id/SpeedSettingButton"
        style="@style/btnStyleShakespeare"
        android:layout_width="fill_parent"
        android:layout_height="150dp"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:text="@string/speedsetting"
        android:textSize="50dp" />

    <Button
        android:id="@+id/HeadingSettingButton"
        style="@style/btnStyleShakespeare"
        android:layout_width="fill_parent"
        android:layout_height="150dp"
        android:layout_below="@+id/SpeedSettingButton"
        android:gravity="center"
        android:text="@string/headingsetting"
        android:textSize="50dp" />

    <Button
        android:id="@+id/BearingSettingButton"
        style="@style/btnStyleShakespeare"
        android:layout_width="fill_parent"
        android:layout_height="150dp"
        android:layout_below="@+id/HeadingSettingButton"
        android:gravity="center"
        android:text="@string/bearingsetting"
        android:textSize="50dp" />

    <Button
        android:id="@+id/DistanceSettingButton"
        style="@style/btnStyleShakespeare"
        android:layout_width="fill_parent"
        android:layout_height="150dp"
        android:layout_below="@+id/BearingSettingButton"
        android:gravity="center"
        android:text="@string/distancesetting"
        android:textSize="50dp" />

    <Button
        android:id="@+id/AccuracySettingButton"
        style="@style/btnStyleShakespeare"
        android:layout_width="fill_parent"
        android:layout_height="150dp"
        android:layout_below="@+id/DistanceSettingButton"
        android:gravity="center"
        android:text="@string/accuracysetting"
        android:textSize="50dp" />

</RelativeLayout>