<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="10dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="10dp" >

    <CheckBox
        android:id="@+id/speedAutoCheckBox"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:textSize="30dp"
        android:text="@string/autospeed" />

    <TextView
        android:id="@+id/speedTresholdView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/speedAutoCheckBox"
        android:layout_toLeftOf="@+id/DecreaseSpeedTresholdButton"
        android:gravity="center"
        android:text="@string/speedtreshold" />

    <Button
        android:id="@+id/DecreaseSpeedTresholdButton"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:textSize="50dp"
        android:textAlignment="center"
        android:layout_below="@+id/speedAutoCheckBox"
        android:layout_toLeftOf="@+id/IncreaseSpeedTresholdButton"
        android:text="@string/DecreaseButton" />

    <Button
        android:id="@+id/IncreaseSpeedTresholdButton"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:textSize="50dp"
        android:textAlignment="center"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/speedAutoCheckBox"
        android:text="@string/IncreaseButton" />

    <TextView
        android:id="@+id/speedTimeTresholdView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/IncreaseSpeedTresholdButton"
        android:layout_toLeftOf="@+id/DecreaseSpeedTimeTresholdButton"
        android:gravity="center"
        android:text="@string/speedtimetreshold" />

    <Button
        android:id="@+id/DecreaseSpeedTimeTresholdButton"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:textSize="50dp"
        android:textAlignment="center"
        android:layout_below="@+id/IncreaseSpeedTresholdButton"
        android:layout_toLeftOf="@+id/IncreaseSpeedTimeTresholdButton"
        android:gravity="center"
        android:text="@string/DecreaseButton" />

    <Button
        android:id="@+id/IncreaseSpeedTimeTresholdButton"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:textSize="50dp"
        android:textAlignment="center"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/IncreaseSpeedTresholdButton"
        android:gravity="center"
        android:text="@string/IncreaseButton" />
    
    <Button
        android:id="@+id/SaveSettingButton"
        android:layout_width="fill_parent"
        android:layout_height="150dp"
        android:textSize="50dp"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:text="@string/savesetting" />
    

</RelativeLayout>