<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="10dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="10dp" >

    <CheckBox
        android:id="@+id/headingAutoCheckBox"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:text="@string/autohead"
        android:textSize="30dp" />

    <TextView
        android:id="@+id/HeadingTresholdView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/headingAutoCheckBox"
        android:layout_toLeftOf="@+id/DecreaseHeadingTresholdButton"
        android:gravity="center"
        android:text="@string/headingtreshold"
        android:textSize="30dp" />

    <Button
        android:id="@+id/DecreaseHeadingTresholdButton"
        style="@style/btnStyleShakespeare"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_below="@+id/headingAutoCheckBox"
        android:layout_toLeftOf="@+id/IncreaseHeadingTresholdButton"
        android:gravity="center"
        android:text="@string/DecreaseButton"
        android:textAlignment="center"
        android:textSize="50dp" />

    <Button
        android:id="@+id/IncreaseHeadingTresholdButton"
        style="@style/btnStyleShakespeare"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/headingAutoCheckBox"
        android:gravity="center"
        android:text="@string/IncreaseButton"
        android:textAlignment="center"
        android:textSize="50dp" />

    <TextView
        android:id="@+id/HeadingTimeTresholdView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/IncreaseHeadingTresholdButton"
        android:layout_toLeftOf="@+id/DecreaseHeadingTimeTresholdButton"
        android:gravity="center"
        android:text="@string/headingtimetreshold"
        android:textSize="30dp" />

    <Button
        android:id="@+id/DecreaseHeadingTimeTresholdButton"
        style="@style/btnStyleShakespeare"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_below="@+id/IncreaseHeadingTresholdButton"
        android:layout_toLeftOf="@+id/IncreaseHeadingTimeTresholdButton"
        android:gravity="center"
        android:text="@string/DecreaseButton"
        android:textAlignment="center"
        android:textSize="50dp" />

    <Button
        android:id="@+id/IncreaseHeadingTimeTresholdButton"
        style="@style/btnStyleShakespeare"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/IncreaseHeadingTresholdButton"
        android:gravity="center"
        android:text="@string/IncreaseButton"
        android:textAlignment="center"
        android:textSize="50dp" />

    <Button
        android:id="@+id/SaveSettingButton"
        style="@style/btnStyleShakespeare"
        android:layout_width="fill_parent"
        android:layout_height="150dp"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:text="@string/savesetting"
        android:textSize="50dp" />

</RelativeLayout>