<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="orion.ms.sara.SpeechRateActivity"
    tools:ignore="MergeRootFrame" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:text="@string/speechIntro"
            android:textSize="50dp" />

        <Button
            android:id="@+id/button1"
            android:layout_width="fill_parent"
            android:layout_height="150dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:text="@string/savebutton"
            android:textSize="50dp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/button2"
            android:layout_alignBottom="@+id/button2"
            android:layout_centerHorizontal="true"
            android:text="TextView"
            android:textSize="50dp" />

        <Button
            android:id="@+id/button2"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_below="@+id/textView1"
            android:layout_marginLeft="23dp"
            android:layout_marginTop="126dp"
            android:layout_toRightOf="@+id/button3"
            android:text="@string/plus_button"
            android:textSize="50dp" />

        <Button
            android:id="@+id/button3"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_alignBottom="@+id/textView2"
            android:layout_marginLeft="24dp"
            android:layout_toRightOf="@+id/textView2"
            android:text="@string/minus_button"
            android:textSize="50dp" />

    </RelativeLayout>

</FrameLayout>